feat: add endpoint security resources and security options
